--- a/src/components/characters/character.css
+++ b/src/components/characters/character.css
@@ -3,6 +3,11 @@
     background-color: #740001;
     color: #C0C0C0;
   }
+
+  img{
+    width: 175px;
+}
+
   ul{
       display: flex;
       flex-direction: row;
@@ -13,12 +18,19 @@
 
  li{
       width: 200px;
-      height: 250px;
       background-color: #D3A625;
       padding: 10px;
       margin: 10px;
+      text-align: center;
   }
 
-.list-img{
-      width: 100px;
-  }
+h3{
+    background-color: #D3A625;
+    color: #740001;
+    font-size: 22px;
+}
+
+p{
+    background-color: #D3A625;
+    color: #740001;
+}
